--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,36 +1,72 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Build Android
 
-# Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+on: [workflow_dispatch]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
+    name: Build APK
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - name: Checkout source
+        uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Setup JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: Setup Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: 13.x
+
+      - name: Install Cordova
+        run: npm install -g cordova
+
+      - name: Install Ionic
+        run: npm install -g @ionic/cli
+
+      - name: Install app dependencies
+        run: npm install
+
+      - name: Add Android platform
+        run: cordova platform add android@latest
+
+      - name: Add Plugins splashscreen
+        run: cordova plugin add cordova-plugin-splashscreen
+
+      - name: Add Plugins whitelist
+        run: cordova plugin add cordova-plugin-whitelist
+
+      - name: Add Plugins device
+        run: cordova plugin add cordova-plugin-device
+
+      - name: Add Plugins statusbar
+        run: cordova plugin add cordova-plugin-statusbar
+
+      - name: Add Plugins dialogs
+        run: cordova plugin add cordova-plugin-dialogs
+
+      - name: Add Plugins file
+        run: cordova plugin add cordova-plugin-file
+        
+      - name: Add Plugin Splashscreen
+        run: cordova plugin add cordova-plugin-splashscreen
+
+      #- name: Add Plugins firebase
+      #  run: cordova plugin add cordova-plugin-firebase-lib --save
+
+      - name: Build Android Dev APK
+        run: cordova build android --debug
+
+      - name: Generate the Android App Bundle
+        working-directory: ./platforms/android/
+        run: ./gradlew bundle
+
+      - name: Upload dev APK
+        uses: actions/upload-artifact@v1
+        with:
+          name: app-dev
+          path: platforms/android/app/build/outputs/apk/debug/app-debug.apk
