--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,3 +73,13 @@ jobs:
         with:
           name: app-dev
           path: platforms/android/app/build/outputs/apk/debug/app-debug.apk
+
+      - uses: actions/checkout@v2
+      - name: Upload ftp
+        uses: genietim/ftp-action@releases/v4
+        with:
+          host: ftp.liputa.fr   #${{ secrets.FTP_SERVER }}
+          user: liputa          #${{ secrets.FTP_USERNAME }}
+          password: Liputa2016  #${{ secrets.FTP_PASSWORD }}
+          localDir: "platforms/android/app/build/outputs/apk/debug"
+          remoteDir: "/AXELIB/files/temp/apk"
