--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           java-version: 11
           distribution: 'temurin'
-          cache: gradle
+          #cache: gradle
 
       - name: Setup Node.js
         uses: actions/setup-node@v1
