--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,13 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v3
 
+      - uses: actions/checkout@master
+      - name: Update version
+        uses: brettdorrans/write-version-to-file@master
+        with:
+          filename: '/.VERSION'
+          placeholder: '${VERSION}'
+
       - name: Setup JDK 11
         uses: actions/setup-java@v3
         with:
