--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Update version
         uses: brettdorrans/write-version-to-file@master
         with:
-          filename: '/.VERSION'
+          filename: '.VERSION'
           placeholder: '${VERSION}'
 
       - name: Setup JDK 11
