--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,11 +76,11 @@ jobs:
         working-directory: ./platforms/android/
         run: ./gradlew bundle
   
-  deploy:
-    name: Deploy App
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
+  #deploy:
+  #  name: Deploy App
+  #  needs: build
+  #  runs-on: ubuntu-latest
+  #  steps:
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
         with:
