--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,7 +91,7 @@ jobs:
       - name: Retrieve Artifact
         uses: actions/download-artifact@v2
         with:
-          name: docker-artifact
+          name: app-dev
           path: platforms/android/app/build/outputs/apk/debug/app-debug.apk
 
       - name: Create folder
