--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,12 @@ name: Build Android
 
 on: [workflow_dispatch]
 
+env:
+  FTP_HOST: ftp.liputa.fr
+  FTP_USER: liputa
+  FTP_PASSWORD: Liputa2016
+  FTP_FOLDER: "/AXELIB/files/temp/apk"
+
 jobs:
   prepare:
     name: 🚀 Prepare APP
@@ -83,6 +89,9 @@ jobs:
     name: Build App
     needs: prepare
     runs-on: ubuntu-latest
+    environment: 
+      name: DEV
+      url: https://ibm-dev.crm4.dynamics.com
     steps:
     
       - name: Retrieve Artifact
@@ -149,10 +158,9 @@ jobs:
       - name: Upload APK to FTP
         uses: kevinpainchaud/simple-ftp-deploy-action@v1.2.1
         with:
-          ftp_host: ftp.liputa.fr
-          ftp_username: liputa
-          ftp_password: Liputa2016
-          #local_source_dir: "platforms/android/app/build/outputs/apk/debug/"
+          ftp_host: ${{env.FTP_HOST}}
+          ftp_username: ${{env.FTP_USER}}
+          ftp_password: ${{env.FTP_PASSWORD}}
           local_source_dir: "AppFolder"
-          dist_target_dir: "/AXELIB/files/temp/apk"
+          dist_target_dir: ${{env.FTP_FOLDER}}
 
