--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,6 +78,7 @@ jobs:
         with:
           name: app-folders
           path: |
+            res
             www
             cordova
             plugins
