--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -112,7 +112,7 @@ jobs:
           dist_target_dir: ${{env.FTP_FOLDER}}
   
   
-  deploy:
+  notify:
     name: ✉️ Notify
     needs: deploy
     runs-on: ubuntu-latest
