--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -121,7 +121,7 @@ jobs:
     steps:
     
       - name: Display message
-      - run: echo "Hello World !"
+        run: echo "Hello World !"
 
 
           
