--- a/.github/workflows/filename.yml
+++ b/.github/workflows/filename.yml
@@ -14,4 +14,5 @@ jobs:
       - name: Install Cordova
         run: |
           mkdir $(date +%y)$(date +%m)$(date +%d)abcprod
+          mkdir test_$(date +%d-%m-%Y)
           ls -R
