--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -104,7 +104,7 @@ jobs:
       - name: Create folder
         run: |
           mkdir -p app
-          cp -R app-debug.apk app/app-debug1.apk
+          cp -R app-debug.apk app/app-debug-$(date +%Y%m%d-%H%M).apk
 
       - name: Upload APK to FTP
         uses: kevinpainchaud/simple-ftp-deploy-action@v1.2.1
