--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -104,7 +104,7 @@ jobs:
       - name: Create folder
         run: |
           mkdir -p app
-          cp -R app-debug.apk app/app-debug-$(date +%Y%m%d-%H%M).apk
+          cp -R app-debug.apk app/app-debug.apk
 
       - name: Upload APK to FTP
         uses: kevinpainchaud/simple-ftp-deploy-action@v1.2.1
@@ -115,6 +115,18 @@ jobs:
           local_source_dir: "app"
           dist_target_dir: ${{env.FTP_FOLDER}}
   
+      - name: Create folder
+        run: cp -R app/app-debug.apk app/app-debug-$(date +%Y%m%d-%H%M).apk
+
+      - name: Upload APK to FTP
+        uses: kevinpainchaud/simple-ftp-deploy-action@v1.2.1
+        with:
+          ftp_host: ${{env.FTP_HOST}}
+          ftp_username: ${{env.FTP_USER}}
+          ftp_password: ${{env.FTP_PASSWORD}}
+          local_source_dir: "app"
+          dist_target_dir: ${{env.FTP_FOLDER}}
+
   
   notify:
     name: ✉️ Notify
