--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -141,7 +141,7 @@ jobs:
 
   
   publish:
-    name: 📢 Communicate to Customer
+    name: 📢 Publish to Customer
     needs: deploy
     runs-on: ubuntu-latest
     environment: 
