--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -148,6 +148,11 @@ jobs:
     
       - name: Display message
         run: echo "Hello World !"
+      - name: test
+        uses: cinotify/github-action@main
+        with:
+          to: 'gilles.bandza@gmal.com'
+          subject: 'building main'
+          body: 'This is a notification from GitHub actions.<br>This is good'
 
-  
           
