--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -151,8 +151,8 @@ jobs:
       - name: test
         uses: cinotify/github-action@main
         with:
-          to: 'gilles.bandza@gmal.com'
-          subject: 'building main'
-          body: 'This is a notification from GitHub actions.<br>This is good'
+          to: 'gilles.bandza@gmail.com'
+          subject: 'Building main'
+          body: 'This is a notification from GitHub actions.\n\rThis is good'
 
           
