--- a/.github/workflows/filename.yml
+++ b/.github/workflows/filename.yml
@@ -17,7 +17,9 @@ jobs:
         with:
           to: 'gilles.bandza@gmail.com'
           subject: 'building main'
-          body: 'This is a notification from GitHub actions.<br> \n\r This is good'
+          body: |
+            hello world
+            this is a new day
     
       - name: Install Cordova
         run: |
