--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,3 +3,14 @@ on:
   push:
     tags:
       - v[0-9]+.[0-9]+.[0-9]+
+
+jobs:
+  namefile:
+    name: 🚀 Build Filename
+    runs-on: ubuntu-latest
+    environment: 
+      name: DEV
+    steps:
+    
+      - name: test
+        run: echo "hello world"
