--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,16 @@ jobs:
     environment: 
       name: DEV
     steps:
-    
       - name: test
         run: echo "hello world"
+      - uses: actions/checkout@v2
+      - name: Find and Replace
+        uses: jacobtomlinson/gha-find-replace@v2
+        with:
+          find: 'version="1.0.0"'
+          replace: 'version="1.0.1"'
+          include: "**config.xml"
+          regex: true
+          
+          
+          
