--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,10 @@ jobs:
           replace: 'version="1.0.1"'
           include: "**config.xml"
           regex: true
-          
+      - name: Push changes
+        uses: ad-m/github-push-action@v0.6.0
+        with:
+          github_token: ${{ secrets.MY_PAT }}
+          branch: ${{ github.ref }}
           
           
