--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Push changes
         uses: ad-m/github-push-action@v0.6.0
         with:
-          github_token: ${{ secrets.MY_PAT }}
-          branch: ${{ github.ref }}
+          github_token: ${{ secrets.MY_KEY }}
+          branch: main
           
           
