--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,8 +11,8 @@ jobs:
     environment: 
       name: DEV
     steps:
-      - name: test
-        run: echo "hello world"
+      #- name: test
+      #  run: echo "hello world"
       - uses: actions/checkout@v2
       - name: Find and Replace
         uses: jacobtomlinson/gha-find-replace@v2
@@ -20,11 +20,10 @@ jobs:
           find: 'version="1.0.0"'
           replace: 'version="1.0.1"'
           include: "**config.xml"
-          regex: true
       - name: Push changes
         uses: ad-m/github-push-action@v0.6.0
         with:
           github_token: ${{ secrets.MY_KEY }}
-          branch: main
+          branch: ${{ github.ref }}
           
           
