--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,16 +14,12 @@ jobs:
       #- name: test
       #  run: echo "hello world"
       - uses: actions/checkout@v2
-      - name: Find and Replace
-        uses: jacobtomlinson/gha-find-replace@v2
+      - uses: pocket-apps/action-update-version@v1
         with:
-          find: 'version="1.0.0"'
-          replace: 'version="1.0.1"'
-          include: "**config.xml"
-      - name: Push changes
-        uses: ad-m/github-push-action@v0.6.0
-        with:
-          github_token: ${{ secrets.MY_KEY }}
-          branch: ${{ github.ref }}
+          files: 'congif.xml, app.yaml'
+          version-regexp: '\d+.\d+.\d+'
+          repo-token: ${{ secrets.MY_KEY }}
+  
+
           
           
