--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,12 @@ jobs:
       #- name: test
       #  run: echo "hello world"
       - uses: actions/checkout@v2
+      - name: Update version
+        uses: brettdorrans/write-version-to-file@master
+        with:
+          filename: '/.VERSION'
+          placeholder: '${VERSION}'
+          
       - uses: pocket-apps/action-update-version@v1
         with:
           files: 'config.xml' #, app.yaml'
