--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,10 @@
 name: Release App
 on:
-  push:
-    tags:
-      - v[0-9]+.[0-9]+.[0-9]+
+  workflow_dispatch
+  #push:
+  #  tags:
+  #    - v[0-9]+.[0-9]+.[0-9]+
+
 
 jobs:
   namefile:
