--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,9 @@
 name: Release App
 on:
-  workflow_dispatch
-  #push:
-  #  tags:
-  #    - v[0-9]+.[0-9]+.[0-9]+
+  #workflow_dispatch
+  push:
+    tags:
+      - v[0-9]+.[0-9]+.[0-9]+
 
 
 jobs:
