--- a/.github/workflows/manage_version.yml
+++ b/.github/workflows/manage_version.yml
@@ -12,3 +12,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Find and Replace
         run: sed -i 's/version="0.0.1"/version="0.0.2"/' bobo.xml
+      - name: Push changes
+        uses: ad-m/github-push-action@v0.6.0
+        with:
+          github_token: ${{ secrets.MY_KEY }}
+          branch: main
