--- a/.github/workflows/manage_version.yml
+++ b/.github/workflows/manage_version.yml
@@ -17,3 +17,10 @@ jobs:
         with:
           github_token: ${{ secrets.MY_KEY }}
           branch: main
+      - name: Commit & Push changes
+        uses: actions-js/push@master
+        with:
+          github_token: ${{ secrets.MY_KEY }}
+          
+          
+          
