--- a/.github/workflows/manage_version.yml
+++ b/.github/workflows/manage_version.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Find and Replace
         #run: sed -i 's/version="0.0.1"/version="0.0.2"/' bobo.xml 
         #run: sed -i '/widget/s/version="0.0.0"/version="0.0.1"/' bobo.xml
-        run: sed -i '/widget/s/\(version="[0-9]+.[0-9]+.[0-9]+"\)/version="0.0.2"/' bobo.xml
+        run: sed -i '/widget/s/version="\([0-9]+.[0-9]+.[0-9]+\)"/version="0.0.2"/' bobo.xml
       #- name: Push changes
       #  uses: ad-m/github-push-action@v0.6.0
       #  with:
