--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,8 @@
 name: Release App
 on:
   #workflow_dispatch
+  #release:
+    #types: [published]
   push:
     tags:
       - v[0-9]+.[0-9]+.[0-9]+
@@ -20,10 +22,7 @@ jobs:
         uses: actions/checkout@v2
         
       - name: Update version
-        uses: brettdorrans/write-version-to-file@master
-        with:
-          filename: '.VERSION'
-          placeholder: '${VERSION}'
+        run: echo "VERSION -> ${{ github.event.release.tag_name }}"
           
       #- uses: pocket-apps/action-update-version@v1
       #  with:
