--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,11 @@
 name: Release App
 on:
   #workflow_dispatch
-  #release:
-    #types: [published]
-  push:
-    tags:
-      - v[0-9]+.[0-9]+.[0-9]+
+  release:
+    types: [published]
+  #push:
+  #  tags:
+  #    - v[0-9]+.[0-9]+.[0-9]+
 
 
 jobs:
