--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,9 @@ jobs:
         uses: actions/checkout@v2
         
       - name: Update version
-        run: echo "VERSION -> ${{ github.event.release.tag_name }}"
+        run: |
+          echo "VERSION -> ${{ github.event.release.tag_name }}"
+          sed -i '/widget/s/version="\([0-9]\{1,3\}\.[0-9]\{1,3\}\.[0-9]\{1,3\})"/version="${{ github.event.release.tag_name }}"/' bobo.xml
           
       #- uses: pocket-apps/action-update-version@v1
       #  with:
