--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,9 +15,9 @@ jobs:
     environment: 
       name: DEV
     steps:
-      #- name: test
-      #  run: echo "hello world"
-      
+      - name: test
+        run: echo "hello world"
+        
       - name: Checkout source
         uses: actions/checkout@v2
         
