--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,9 @@ on:
   #workflow_dispatch
   release:
     types: [published]
+    tags:
+      - v[0-9]+.[0-9]+.[0-9]+
+      
   #push:
   #  tags:
   #    - v[0-9]+.[0-9]+.[0-9]+
