--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,10 @@ jobs:
       - name: Update version
         run: |
           echo "VERSION -> ${{ github.event.release.tag_name }}"
-          sed -i '/widget/s/version="[0-9]\{1,3\}\.[0-9]\{1,3\}\.[0-9]\{1,3\}"/version="${{ github.event.release.tag_name }}"/' bobo.xml
+          VERSION=${{ github.event.release.tag_name }}
+          VERSION=${VERSION:1}
+          #sed -i '/widget/s/version="[0-9]\{1,3\}\.[0-9]\{1,3\}\.[0-9]\{1,3\}"/version="${{ github.event.release.tag_name }}"/' bobo.xml
+          sed -i '/widget/s/version="[0-9]\{1,3\}\.[0-9]\{1,3\}\.[0-9]\{1,3\}"/version="$VERSION"/' bobo.xml
           
       - name: Commit & Push changes
         uses: actions-js/push@master
