--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,10 @@ on:
     tags:
       - v[0-9]+.[0-9]+.[0-9]+
 
+env:
+  MY_EMAIL: gilles.bandza@gmail.com
+  APP_NAME: Optic Store Finder
+  
 jobs:
   namefile:
     name: 🚀 Release application
@@ -37,11 +41,10 @@ jobs:
         uses: cinotify/github-action@main
         with:
           to: ${{env.MY_EMAIL}}
-          subject: 'Building main'
+          subject: 'Application Upgrade (${{env.APP_NAME}})'
           body: |
             Hello sir,
-            The application (${{env.APP_NAME}}) has been built successfully.
-            Please download here -> ${{secrets.FILE_PATH}}
+            The application (${{env.APP_NAME}}) has been upgraded successfully to version ${{ github.event.release.tag_name }}
             Thank you
 
           
