--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,20 +23,21 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v2
         
+      # Update application version in the config.xml file
       - name: Update version
         run: |
           echo "VERSION -> ${{ github.event.release.tag_name }}"
           VERSION=${{ github.event.release.tag_name }}
           VERSION=${VERSION:1}
-          #sed -i '/widget/s/version="[0-9]\{1,3\}\.[0-9]\{1,3\}\.[0-9]\{1,3\}"/version="${{ github.event.release.tag_name }}"/' bobo.xml
-          #sed -i '/widget/s/version="[0-9]\{1,3\}\.[0-9]\{1,3\}\.[0-9]\{1,3\}"/version="$VERSION"/' bobo.xml
-          sed -i "/widget/s/version=\"[0-9]\{1,3\}\.[0-9]\{1,3\}\.[0-9]\{1,3\}\"/version=\"${VERSION}\"/" bobo.xml
-          
+          sed -i "/widget/s/version=\"[0-9]\{1,3\}\.[0-9]\{1,3\}\.[0-9]\{1,3\}\"/version=\"${VERSION}\"/" config.xml
+      
+      # Commit and push config file
       - name: Commit & Push changes
         uses: actions-js/push@master
         with:
           github_token: ${{ secrets.MY_KEY }}
   
+      # Notify Via Email
       - name: Notify
         uses: cinotify/github-action@main
         with:
