--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,6 +48,7 @@ jobs:
           cordova plugin add cordova-plugin-dialogs
           cordova plugin add cordova-plugin-file
           cordova plugin add cordova-plugin-splashscreen
+          cordova plugin add cordova-plugin-geolocation
           cordova plugin add https://github.com/apache/cordova-plugin-camera.git
           #cordova plugin add cordova-plugin-whitelist
           #cordova plugin add cordova-plugin-firebase-lib --save
